# ophyd-service

./: .gitignore  README.md  docker-compose.yml
backend/configuration_service/: Dockerfile  README.md  pyproject.toml  pyrightconfig.json
backend/configuration_service/docs/explanation/: architecture.md  device-locking.md
backend/configuration_service/docs/how-to/: deploy-systemd.md  load-profiles.md  manage-pvs.md  run-the-service.md
backend/configuration_service/docs/reference/: api.md  configuration.md
backend/configuration_service/docs/tutorials/: getting-started.md
backend/configuration_service/scripts/: export_openapi.py
backend/configuration_service/src/configuration_service/: cli.py  config.py  db.py  device_registry_store.py  direct_control_client.py  loader.py  lock_manager.py  main.py  models.py  path_resolver.py  protocols.py  pv_health_manager.py  standalone_pv_store.py
backend/configuration_service/tests/: conftest.py  test_cli_export.py  test_cli_server.py  test_config_api.py  test_config_models.py  test_device_changes.py  test_device_crud.py  test_device_locking.py  test_direct_control_contract.py  test_loader.py  test_loader_role_fixtures.py  test_openapi_contract.py  test_openapi_drift.py  test_path_resolver.py  test_phase3_registry_lock_lifecycle.py  test_pv_health.py  test_pvs_detailed_and_components.py  test_registry_crud_integrity.py  test_resolve_endpoint.py  test_resolver_loader_store_fixes.py  test_standalone_pv_crud.py
backend/configuration_service/tests/fixtures/: README.md  __init__.py  role_classes.py  role_families.json
backend/direct_control_service/: Dockerfile  README.md  pyproject.toml
backend/direct_control_service/docs/: api.md
backend/direct_control_service/examples/: standalone_registry.example.yaml
backend/direct_control_service/scripts/: export_openapi.py
backend/direct_control_service/src/direct_control/: config.py  coordination_client.py  device_controller.py  device_manager.py  drivers.py  main.py  models.py  ophyd_cache.py  protocols.py  pv_health_reporter.py  registry_client.py  registry_file.py
backend/direct_control_service/tests/: conftest.py  device_classes.py  test_batch_caput.py  test_config_service_integration.py  test_config_startup_probe.py  test_coordination_gates.py  test_ctrl_limit_validation.py  test_device_drivers.py  test_device_execute_integration.py  test_enrich_config_integration.py  test_enrich_endpoint.py  test_epics_integration.py  test_exception_helpers.py  test_gate_status_and_alarm_propagation.py  test_image_sockets.py  test_ioc.py  test_monitor_fanout_and_ttl.py  test_monitoring_reliability.py  test_openapi_drift.py  test_proxy_endpoints.py  test_pv_health_reporter.py  test_read_only.py  test_registry_failure_modes.py  test_registry_file.py  test_silent_failure_resolutions.py  test_smoke.py  test_standalone_examples.py
backend/queueserver_service/: .coveragerc  .flake8  .gitattributes  .pre-commit-config.yaml  .test_durations  Dockerfile  MANIFEST.in  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py
backend/queueserver_service/.github/workflows/: testing.yml
backend/queueserver_service/bluesky-httpserver/: pyproject.toml
backend/queueserver_service/bluesky-httpserver/bluesky_httpserver/: __init__.py
backend/queueserver_service/bluesky_queueserver/: __init__.py
backend/queueserver_service/bluesky_queueserver/manager/: config.py  config_service.py  device_introspection.py  http_server.py  manager.py  profile_ops.py  start_manager.py  worker.py
backend/queueserver_service/docker-configs/: ldap-docker-compose.yml
backend/queueserver_service/docs/source/: cli_tools.rst  conf.py  features_and_config.rst  index.rst  interacting_with_qs.rst  item_validation.rst  manager_config.rst  plan_annotation.rst  re_manager_api.rst  release_history.rst  startup_code.rst  tutorials.rst
backend/queueserver_service/queueserver_service/: __init__.py
backend/queueserver_service/queueserver_service/common/: comms.py  logging_setup.py
backend/queueserver_service/queueserver_service/http/: __init__.py  app.py  authentication.py  authenticators.py  config.py  openapi_config.py  schemas.py  server.py  settings.py  utils.py
backend/queueserver_service/queueserver_service/manager/: annotation_decorator.py  config.py  config_service.py  config_service_coordinator.py  conversions.py  gen_lists.py  http_server.py  manager.py  output_streaming.py  plan_queue_ops.py  profile_collection.py  profile_ops.py  profile_tools.py  qserver_cli.py  queue_store.py  start_manager.py  worker.py
backend/queueserver_service/queueserver_service/profile_collection_sim/: 05-run-engine.py  99-custom.py
backend/queueserver_service/scripts/: export_openapi.py  start_LDAP.sh
backend/queueserver_service/subprojects/bluesky-httpserver/: openapi.json
backend/queueserver_service/tests/: conftest.py
backend/queueserver_service/tests/http/: conftest.py  test_access_control.py  test_access_policies.py  test_auth_api.py  test_auth_for_websockets.py  test_authenticators.py  test_bluesky_httpserver_shim.py  test_console_output.py  test_core_api_fs.py  test_core_api_main.py  test_device_endpoints.py  test_finch_contract.py  test_openapi_drift.py  test_queue_item_by_uid.py  test_response_models.py  test_server.py  test_side_c_api_client_compat.py  test_side_c_auth.py  test_system_info_socket.py  test_utils.py
backend/queueserver_service/tests/manager/: common.py  conftest.py  test_annotation_decorator.py  test_bluesky_queueserver_shim.py  test_comms.py  test_config.py  test_config_service.py  test_config_service_contract.py  test_config_service_coordinator.py  test_config_service_integration.py  test_conversions.py  test_device_introspection.py  test_gen_lists.py  test_info_streaming.py  test_ip_kernel_func.py  test_json_rpc.py  test_logging.py  test_manager.py  test_manager_core_criticals.py  test_manager_options.py  test_output_streaming.py  test_plan_monitoring.py  test_plan_queue_ops.py  test_profile_collection.py  test_profile_ops.py  test_profile_tools.py  test_qserver_cli.py  (+11 more)
(+123 files in other folders)
