[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bluesky-configuration-service"
version = "1.0.0"
description = "Configuration Service (SVC-004) - Device/PV registry for Bluesky Remote Architecture"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "BSD-3-Clause"}
authors = [
    {name = "Bluesky Remote Architecture Team"}
]
keywords = ["bluesky", "configuration", "device-registry", "beamline"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Framework :: FastAPI",
    "Topic :: Scientific/Engineering",
]

dependencies = [
    # Web framework
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "pyyaml>=6.0",
    "structlog>=23.2.0",

    # Device-class introspection for the path resolver. configuration_service
    # never opens EPICS connections; ophyd is walked at class level, and
    # ophyd-async devices are instantiated locally (no .connect()) so their
    # Signal.source URIs can be read. The [ca] extra on ophyd-async pulls
    # in the aioca backend that signal construction needs — imports only,
    # never invoked.
    "ophyd>=1.10",
    "ophyd-async[ca]>=0.16",

    # Async HTTP client for the optional direct-control enrichment fallback.
    # The path_resolver returns ``needs_enrichment`` for FmtCpt placeholders;
    # DirectControlClient asks direct-control to instantiate the device live
    # and fill them in. The import happens at module load so this has to be
    # a runtime dep even when CONFIG_DIRECT_CONTROL_URL is unset.
    "httpx>=0.25",
]

[dependency-groups]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "httpx>=0.25.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
    "schemathesis>=4.0.0",
]

[project.scripts]
bluesky-configuration-service = "configuration_service.cli:main"

[project.urls]
Homepage = "https://github.com/NSLS2/bluesky-configuration-service"
Documentation = "https://github.com/NSLS2/bluesky-configuration-service"
Repository = "https://github.com/NSLS2/bluesky-configuration-service"

[tool.hatch.build.targets.wheel]
packages = ["src/configuration_service"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/tests",
    "/README.md",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--strict-config",
    "--cov=src",
    "--cov-report=term-missing:skip-covered",
    "--cov-fail-under=75",
]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "I",     # isort
    "B",     # flake8-bugbear
    "C4",    # flake8-comprehensions
    "UP",    # pyupgrade
    "ASYNC", # flake8-async (blocking calls in async, missing awaits, etc.)
]
ignore = [
    "E501",     # line too long (handled by formatter)
    "ASYNC109", # `timeout=` parameter on async functions — stylistic, not a bug; we use it for EPICS/CA timeouts and FastAPI Query params
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # Unused imports in __init__.py

[tool.mypy]
python_version = "3.11"
plugins = ["pydantic.mypy"]
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true
warn_unreachable = true

[[tool.mypy.overrides]]
module = [
    "importlib_metadata.*",
    "prometheus_client.*",
    "structlog.*",
]
ignore_missing_imports = true

# Strict typing — modules already clean under disallow_untyped_defs.
# Add new modules here as they're brought up to standard.
[[tool.mypy.overrides]]
module = [
    "configuration_service",
    "configuration_service.class_capabilities",
    "configuration_service.cli",
    "configuration_service.config",
    "configuration_service.protocols",
]
disallow_untyped_defs = true
disallow_incomplete_defs = true
