[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bluesky-direct-control"
version = "1.0.0"
description = "Direct Device Control + Monitoring Service (SVC-003) - A4-coordinated device commanding with real-time EPICS PV monitoring via WebSocket"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "BSD-3-Clause"}
authors = [
    {name = "Bluesky Remote Architecture Team"}
]
keywords = ["bluesky", "epics", "device-control", "coordination", "ophyd", "pv-monitoring", "websocket"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
]

dependencies = [
    # Bluesky ecosystem
    "ophyd>=1.9.0",
    "ophyd-async>=0.13.0",

    # EPICS integration
    "pyepics>=3.5.0",
    "p4p>=4.1.0",

    # Web framework
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "websockets>=12.0",

    # Data validation
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",

    # HTTP client (for service dependencies)
    "httpx>=0.25.0",

    # Observability
    "prometheus-client>=0.19.0",
    "structlog>=23.2.0",
    "opentelemetry-api>=1.21.0",
    "opentelemetry-sdk>=1.21.0",
]

[project.optional-dependencies]
# Development dependencies
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "caproto>=1.1.0",  # for the test IOC (see tests/test_ioc.py)
    "httpx>=0.25.0",  # TestClient dependency (already a runtime dep but explicit here)
    "black>=24.0.0",
    "ruff>=0.3.0",
    "mypy>=1.9.0",
]

# Performance monitoring
monitoring = [
    "prometheus-fastapi-instrumentator>=6.1.0",
]

# All extras
all = [
    "bluesky-direct-control[dev,monitoring]",
]

[project.urls]
Homepage = "https://github.com/sligara7/bluesky-remote-architecture"
Documentation = "https://github.com/sligara7/bluesky-remote-architecture/tree/main/services/direct_control"
Repository = "https://github.com/sligara7/bluesky-remote-architecture"

[project.scripts]
bluesky-direct-control = "direct_control.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/direct_control"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--cov=src",
    "--cov-report=term-missing:skip-covered",
    "--cov-fail-under=60",
]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

[tool.black]
line-length = 100
target-version = ['py311']

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "I",     # isort
    "B",     # flake8-bugbear
    "C4",    # flake8-comprehensions
    "UP",    # pyupgrade
    "ASYNC", # flake8-async (blocking calls in async, missing awaits, etc.)
]
ignore = [
    "ASYNC109", # `timeout=` parameter on async functions — stylistic, not a bug; we use it for EPICS/CA timeouts and FastAPI Query params
]

[tool.mypy]
python_version = "3.11"
plugins = ["pydantic.mypy"]
warn_return_any = true
warn_unused_configs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true
warn_unreachable = true

[[tool.mypy.overrides]]
module = [
    "epics.*",
    "p4p.*",
    "ophyd.*",
    "prometheus_client.*",
    "structlog.*",
]
ignore_missing_imports = true

# Strict typing — modules already clean under disallow_untyped_defs.
# Add new modules here as they're brought up to standard.
[[tool.mypy.overrides]]
module = [
    "direct_control",
    "direct_control._array_metadata",
    "direct_control.cli",
    "direct_control.config",
    "direct_control.coordination_client",
    "direct_control.device_controller",
    "direct_control.models",
    "direct_control.monitoring",
    "direct_control.registry_client",
]
disallow_untyped_defs = true
disallow_incomplete_defs = true
