[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
# The DISTRIBUTION is named bluesky-queueserver (the import package is
# queueserver_service): the PyPI bluesky-queueserver-api client we depend on
# declares Requires-Dist: bluesky-queueserver (it imports nothing from it).
# Keeping the dist name makes this package satisfy that requirement, so
# installers never pull the upstream bluesky-queueserver dist — which would
# silently shadow the qserver/start-re-manager console scripts with the
# upstream implementation.
name = "bluesky-queueserver"
version = "1.0.0"
description = "Plan queueing and HTTP API backend for ophyd-service (based on bluesky-queueserver and bluesky-httpserver)"
readme = "README.md"
license = { text = "BSD (3-clause)" }
authors = [{ name = "Brookhaven National Laboratory" }]
requires-python = ">=3.9"
classifiers = [
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
]
dynamic = ["dependencies"]

[project.scripts]
qserver = "queueserver_service.manager.qserver_cli:qserver"
start-re-manager = "queueserver_service.manager.start_manager:start_manager"
qserver-list-plans-devices = "queueserver_service.manager.gen_lists:gen_list_of_plans_and_devices_cli"
qserver-zmq-keys = "queueserver_service.manager.qserver_cli:qserver_zmq_keys"
qserver-clear-lock = "queueserver_service.manager.qserver_cli:qserver_clear_lock"
qserver-console = "queueserver_service.manager.qserver_cli:qserver_console"
qserver-qtconsole = "queueserver_service.manager.qserver_cli:qserver_qtconsole"
qserver-console-monitor = "queueserver_service.manager.output_streaming:qserver_console_monitor_cli"
start-bluesky-httpserver = "queueserver_service.http.server:start_server"

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }

[tool.setuptools.packages.find]
# bluesky_queueserver is the one-module legacy import surface needed by the
# bluesky-queueserver-api client; see its docstring.
include = ["queueserver_service*", "bluesky_queueserver"]

[tool.setuptools.package-data]
queueserver_service = ["profile_collection_sim/*"]
"queueserver_service.manager" = ["config_schemas/*.yml"]
"queueserver_service.http" = [
    "config_schemas/*.yml",
    "database/alembic.ini.template",
    "database/migrations/env.py",
    "database/migrations/script.py.mako",
    "database/migrations/versions/*.py",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
norecursedirs = [".git", "build", "dist", "*.egg-info"]

[tool.black]
line-length = 115
target-version = ['py310']
include = '\.pyi?$'
force-exclude = '''
(
  /(
      \.eggs
    | \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | \.pytest_cache
    | _build
    | buck-out
    | build
    | dist
    | docs
  )/
)
'''
