[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
# The DISTRIBUTION is named bluesky-queueserver (the import package is
# queueserver_service): the PyPI bluesky-queueserver-api client we depend on
# declares Requires-Dist: bluesky-queueserver (it imports nothing from it).
# Keeping the dist name makes this package satisfy that requirement, so
# installers never pull the upstream bluesky-queueserver dist — which would
# silently shadow the qserver/start-re-manager console scripts with the
# upstream implementation.
name = "bluesky-queueserver"
version = "1.0.0"
description = "Plan queueing and HTTP API backend for ophyd-service (based on bluesky-queueserver and bluesky-httpserver)"
readme = "README.md"
license = { text = "BSD (3-clause)" }
authors = [{ name = "Brookhaven National Laboratory" }]
requires-python = ">=3.9"
classifiers = [
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
]
dynamic = ["dependencies"]

[project.scripts]
qserver = "queueserver_service.manager.qserver_cli:qserver"
start-re-manager = "queueserver_service.manager.start_manager:start_manager"
qserver-list-plans-devices = "queueserver_service.manager.gen_lists:gen_list_of_plans_and_devices_cli"
qserver-zmq-keys = "queueserver_service.manager.qserver_cli:qserver_zmq_keys"
qserver-clear-lock = "queueserver_service.manager.qserver_cli:qserver_clear_lock"
qserver-console = "queueserver_service.manager.qserver_cli:qserver_console"
qserver-qtconsole = "queueserver_service.manager.qserver_cli:qserver_qtconsole"
qserver-console-monitor = "queueserver_service.manager.output_streaming:qserver_console_monitor_cli"
start-bluesky-httpserver = "queueserver_service.http.server:start_server"

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }

[tool.setuptools.packages.find]
# bluesky_queueserver is the one-module legacy import surface needed by the
# bluesky-queueserver-api client; see its docstring.
include = ["queueserver_service*", "bluesky_queueserver"]

[tool.setuptools.package-data]
queueserver_service = ["profile_collection_sim/*"]
"queueserver_service.manager" = ["config_schemas/*.yml"]
"queueserver_service.http" = [
    "config_schemas/*.yml",
    "database/alembic.ini.template",
    "database/migrations/env.py",
    "database/migrations/script.py.mako",
    "database/migrations/versions/*.py",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
norecursedirs = [".git", "build", "dist", "*.egg-info"]
markers = [
    "slow: recorded duration >= the QS_SLOW_TEST_THRESHOLD (default 1s); applied automatically from .test_durations in tests/conftest.py",
]

# Ruff config for THIS service. This service's own `.pre-commit-config.yaml`
# (NOT the monorepo root config) runs ruff with this config, scoped via that
# hook's `files:` filter to the modules maintained in-tree by this fork
# (config_service, queue_store, http_server, the profile-collection router).
# The bulk of the package is vendored bluesky-queueserver/-httpserver code and
# is intentionally NOT gated here — hence a deliberately narrow, bug-focused
# ruleset rather than the full style set the other backends use.
# `ruff check <whole package>` will still report findings in the vendored code;
# that is expected and is not the gate.
[tool.ruff]
line-length = 115
target-version = "py39"

[tool.ruff.lint]
select = [
    "F",     # pyflakes — undefined names, unused imports, real defects
    "B",     # flake8-bugbear — mutable defaults, except-without-from, traps
    "ASYNC", # flake8-async — blocking calls / missing awaits in async code
]

[tool.ruff.lint.flake8-bugbear]
# FastAPI's dependency-injection markers are call-in-argument-default by
# design; whitelisting them avoids B008 false positives on every route.
extend-immutable-calls = [
    "fastapi.Security",
    "fastapi.Depends",
    "fastapi.Query",
    "fastapi.Body",
    "fastapi.Path",
    "fastapi.Header",
    "fastapi.Cookie",
    "fastapi.Form",
    "fastapi.File",
]

[tool.black]
line-length = 115
target-version = ['py310']
include = '\.pyi?$'
force-exclude = '''
(
  /(
      \.eggs
    | \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | \.pytest_cache
    | _build
    | buck-out
    | build
    | dist
    | docs
  )/
)
'''
